# mossglim

./: .gitignore  README.md  index.html  landing.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-28-poweren-implementation.md
docs/superpowers/specs/: 2026-03-28-poweren-design.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  lib.rs  main.rs
src/components/: Layout.tsx  Sidebar.tsx  Toast.tsx
src/components/review/: FlashcardMode.tsx  QuickScanMode.tsx  ReviewEntryPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/stats/: StatsPage.tsx
src/components/text/: AnalysisPanel.tsx  ReadingView.tsx  TextEditor.tsx  TextHistory.tsx  TextInputPage.tsx  highlights.ts
src/components/vocab/: VocabCard.tsx  VocabDetail.tsx  VocabPage.tsx
src/services/: api.ts
src/stores/: reviewStore.ts  settingsStore.ts  textStore.ts  toastStore.ts  vocabStore.ts
tests/components/: FlashcardMode.test.tsx  QuickScanMode.test.tsx  Sidebar.test.tsx  VocabCard.test.tsx
tests/stores/: reviewStore.test.ts
